--- a/src/styles/components/admin/global.css
+++ b/src/styles/components/admin/global.css
@@ -98,3 +98,21 @@ body.admin {
   resize: none;               /* 크기 조절 비활성화 (옵션) */
 
 }
+
+.textarea-group-text {
+  display: flex;
+  align-items: center;
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: var(--bs-body-color);
+  text-align: center;
+  white-space: nowrap;
+  background-color: var(--bs-tertiary-bg);
+  border: var(--bs-border-width) solid var(--bs-border-color);
+  border-top-left-radius: 0.375rem;
+  border-top-right-radius: 0.375rem;
+  
+  /*border-radius: var(--bs-border-radius);*/
+}
